--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "protobuf<7,>=3.12.0",
     "google-api-python-client >= 2.0.0",
     "psutil ~=6.0.0",
-    "python-dateutil ~=2.8.0",
+    "python-dateutil >=2.9.0",
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
     "s3fs>=2024.6.1",
@@ -114,6 +114,9 @@ dev = [
 
 [tool.uv]
 extra-index-url = ["https://pypi.scm.io/simple"]
+override-dependencies = [
+    "botocore >=1.40.2", # required for py3.12 support without deprecation warning
+]
 
 [tool.uv.sources]
 cluster-tools = { path = "../cluster_tools", editable = true }
