--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "protobuf<7,>=3.12.0",
     "google-api-python-client >= 2.0.0",
     "psutil ~=6.0.0",
-    "python-dateutil ~=2.8.0",
+    "python-dateutil >=2.9.0",
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
     "s3fs>=2024.6.1",
