add new AI training data tutorials to docs

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -219,9 +219,10 @@ nav:
         - Installation: webknossos/open_source/installation.md
         - Dataset Handling: webknossos/open_source/dataset_handling.md
     - Tutorials:
-      - Volume Annotation: webknossos/tutorial_volume_annotation.md
-      - Data Sharing: webknossos/tutorial_data_sharing.md
-      - Automation: webknossos/tutorial_automation.md
+      - Volume Annotation: webknossos/tutorials/tutorial_volume_annotation.md
+      - Data Sharing: webknossos/tutorials/tutorial_data_sharing.md
+      - Automation: webknossos/tutorials/tutorial_automation.md
+      - AI Training Data Annotation: webknossos/tutorials/tutorial_trainingdata_annotation.md
       - Today I Learned: webknossos/today_i_learned.md
     - Reference:
       - Frontend Scripting API: https://webknossos.org/assets/docs/frontend-api/index.html" target="_blank
