--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -60,7 +60,7 @@ dependencies = [
     "typing-extensions ~=4.0",
     "universal-pathlib ~=0.2",
     "wkw ==1.1.24",
-    "zipp ~=3.5.0",
+    "zipp >=3.5.0,<4.0.0",
 ]
 
 [project.urls]
